Add basic HTML structure for Incubator Analyzer

--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Incubator Analyzer</title>
+</head>
+<body>
+    <h1>Selamat datang!</h1>
+    <p>Ini halaman web monitoring incubator.</p>
+</body>
+</html>
 
