--- a/index.html
+++ b/index.html
@@ -6,78 +6,31 @@
   <title>Incubator Analyzer</title>
 
   <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: "Poppins", sans-serif;
-    }
-
+    * {margin: 0; padding: 0; box-sizing: border-box; font-family: "Poppins", sans-serif;}
     body {
       background: linear-gradient(135deg, #2563eb, #4f46e5);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      padding: 20px;
-      min-height: 100vh;
-      color: #fff;
+      display: flex; align-items: center; justify-content: center;
+      min-height: 100vh; padding: 20px; color: #fff;
     }
-
     .card {
-      width: 100%;
-      max-width: 450px;
-      background: white;
-      color: #333;
-      padding: 30px;
-      border-radius: 18px;
+      width: 100%; max-width: 450px;
+      background: white; color: #333; padding: 30px;
+      border-radius: 18px; text-align: center;
       box-shadow: 0 10px 25px rgba(0,0,0,0.2);
-      animation: fadeIn 0.7s ease-in-out;
-      text-align: center;
     }
-
-    h1 {
-      font-size: 26px;
-      margin-bottom: 8px;
-      color: #2563eb;
-    }
-
-    p {
-      margin-bottom: 25px;
-      font-size: 15px;
-      color: #444;
-    }
-
+    h1 { font-size: 26px; color: #2563eb; margin-bottom: 8px; }
+    p { margin-bottom: 25px; font-size: 15px; color: #444; }
     .sensor-box {
-      display: flex;
-      justify-content: space-between;
-      padding: 20px;
-      background: #f3f4f6;
-      border-radius: 12px;
-      margin-bottom: 10px;
-      font-size: 18px;
-      font-weight: 500;
+      display: flex; justify-content: space-between;
+      padding: 20px; background: #f3f4f6;
+      border-radius: 12px; margin-bottom: 10px;
+      font-size: 18px; font-weight: 500;
     }
-
-    .label {
-      color: #374151;
-    }
-    .value {
-      color: #2563eb;
-      font-weight: bold;
-    }
-
-    footer {
-      font-size: 12px;
-      margin-top: 25px;
-      color: #666;
-    }
-
-    @keyframes fadeIn {
-      from {opacity: 0; transform: translateY(20px);}
-      to {opacity: 1; transform: translateY(0);}
-    }
+    .value { color: #2563eb; font-weight: bold;}
+    footer { font-size: 12px; margin-top: 25px; color: #666;}
   </style>
 </head>
+
 <body>
   <div class="card">
     <h1>🟢 Incubator Analyzer</h1>
@@ -95,5 +48,36 @@
 
     <footer>© 2025 IoT Incubator Monitor</footer>
   </div>
+
+  <!-- Firebase -->
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
+
+  <script>
+    const firebaseConfig = {
+      apiKey: "ISI API_KEY",
+      authDomain: "ISI AUTH_DOMAIN",
+      databaseURL: "ISI DATABASE_URL",
+      projectId: "ISI PROJECT_ID",
+      storageBucket: "ISI STORAGE_BUCKET",
+      messagingSenderId: "ISI MSG_ID",
+      appId: "ISI APP_ID"
+    };
+
+    firebase.initializeApp(firebaseConfig);
+    const database = firebase.database();
+
+    const suhuRef = database.ref("incubator/suhu");
+    const humRef = database.ref("incubator/kelembaban");
+
+    suhuRef.on("value", (snapshot) => {
+      document.getElementById("suhu").innerText = snapshot.val() + " °C";
+    });
+
+    humRef.on("value", (snapshot) => {
+      document.getElementById("kelembaban").innerText = snapshot.val() + " %";
+    });
+  </script>
+
 </body>
 </html>
