--- a/index.html
+++ b/index.html
@@ -6,78 +6,110 @@
   <title>Incubator Analyzer</title>
 
   <style>
-    * {margin: 0; padding: 0; box-sizing: border-box; font-family: "Poppins", sans-serif;}
+    * {margin:0;padding:0;box-sizing:border-box;font-family:"Poppins",sans-serif;}
     body {
-      background: linear-gradient(135deg, #2563eb, #4f46e5);
-      display: flex; align-items: center; justify-content: center;
-      min-height: 100vh; padding: 20px; color: #fff;
+      background: linear-gradient(135deg,#2563eb,#4f46e5);
+      display:flex;align-items:center;justify-content:center;
+      padding:20px;min-height:100vh;color:#fff;
     }
     .card {
-      width: 100%; max-width: 450px;
-      background: white; color: #333; padding: 30px;
-      border-radius: 18px; text-align: center;
-      box-shadow: 0 10px 25px rgba(0,0,0,0.2);
+      width:100%;max-width:450px;background:white;color:#333;
+      padding:30px;border-radius:18px;box-shadow:0 10px 25px rgba(0,0,0,0.2);
+      text-align:center;
     }
-    h1 { font-size: 26px; color: #2563eb; margin-bottom: 8px; }
-    p { margin-bottom: 25px; font-size: 15px; color: #444; }
+    h1 {font-size:26px;margin-bottom:8px;color:#2563eb;}
     .sensor-box {
-      display: flex; justify-content: space-between;
-      padding: 20px; background: #f3f4f6;
-      border-radius: 12px; margin-bottom: 10px;
-      font-size: 18px; font-weight: 500;
+      display:flex;justify-content:space-between;
+      padding:20px;background:#f3f4f6;border-radius:12px;
+      margin-bottom:10px;font-size:18px;font-weight:500;
     }
-    .value { color: #2563eb; font-weight: bold;}
-    footer { font-size: 12px; margin-top: 25px; color: #666;}
+    .label {color:#374151;}
+    .value {color:#2563eb;font-weight:bold;}
+    button {
+      margin-top:15px;padding:12px 18px;border:none;
+      background:#2563eb;color:white;border-radius:8px;
+      cursor:pointer;font-size:15px;
+    }
+    button:hover {opacity:0.9;}
+    footer {font-size:12px;margin-top:25px;color:#666;}
   </style>
 </head>
-
 <body>
-  <div class="card">
-    <h1>🟢 Incubator Analyzer</h1>
-    <p>Pengawas suhu & kelembaban realtime</p>
 
-    <div class="sensor-box">
-      <span class="label">Suhu</span>
-      <span id="suhu" class="value">-- °C</span>
-    </div>
+<div class="card">
+  <h1>🟢 Incubator Analyzer</h1>
+  <p>Pengawas suhu & kelembaban realtime</p>
 
-    <div class="sensor-box">
-      <span class="label">Kelembaban</span>
-      <span id="kelembaban" class="value">-- %</span>
-    </div>
-
-    <footer>© 2025 IoT Incubator Monitor</footer>
+  <div class="sensor-box">
+    <span class="label">Suhu:</span>
+    <span id="suhu" class="value">-- °C</span>
   </div>
 
-  <!-- Firebase -->
-  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
+  <div class="sensor-box">
+    <span class="label">Kelembaban:</span>
+    <span id="kelembaban" class="value">-- %</span>
+  </div>
 
-  <script>
-    const firebaseConfig = {
-      apiKey: "ISI API_KEY",
-      authDomain: "ISI AUTH_DOMAIN",
-      databaseURL: "ISI DATABASE_URL",
-      projectId: "ISI PROJECT_ID",
-      storageBucket: "ISI STORAGE_BUCKET",
-      messagingSenderId: "ISI MSG_ID",
-      appId: "ISI APP_ID"
-    };
+  <button onclick="downloadCSV()">Download CSV</button>
+  <footer>© 2025 IoT Incubator Monitor</footer>
+</div>
 
-    firebase.initializeApp(firebaseConfig);
-    const database = firebase.database();
+<!-- Firebase -->
+<script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-database.js"></script>
 
-    const suhuRef = database.ref("incubator/suhu");
-    const humRef = database.ref("incubator/kelembaban");
+<script>
+const firebaseConfig = {
+  apiKey: "GANTI",
+  authDomain: "GANTI",
+  databaseURL: "GANTI",
+  projectId: "GANTI",
+  storageBucket: "GANTI",
+  messagingSenderId: "GANTI",
+  appId: "GANTI"
+};
 
-    suhuRef.on("value", (snapshot) => {
-      document.getElementById("suhu").innerText = snapshot.val() + " °C";
-    });
+firebase.initializeApp(firebaseConfig);
+const db = firebase.database();
 
-    humRef.on("value", (snapshot) => {
-      document.getElementById("kelembaban").innerText = snapshot.val() + " %";
-    });
-  </script>
+// Simpan log CSV
+let logData = [];
+
+// Realtime suhu
+db.ref("incubator/suhu").on("value", snap => {
+  const suhu = snap.val();
+  const waktu = new Date().toLocaleString();
+  document.getElementById("suhu").innerText = suhu + " °C";
+
+  logData.push({ waktu, suhu });
+});
+
+// Realtime kelembaban
+db.ref("incubator/kelembaban").on("value", snap => {
+  const kelembaban = snap.val();
+  const waktu = new Date().toLocaleString();
+  document.getElementById("kelembaban").innerText = kelembaban + " %";
+
+  if (logData.length > 0) {
+    logData[logData.length - 1].kelembaban = kelembaban;
+  }
+});
+
+// Download CSV
+function downloadCSV() {
+  let csv = "waktu,suhu,kelembaban\n";
+  logData.forEach(r => {
+    csv += `${r.waktu},${r.suhu || ""},${r.kelembaban || ""}\n`;
+  });
+
+  const blob = new Blob([csv], { type: "text/csv" });
+  const url = URL.createObjectURL(blob);
+  const a = document.createElement("a");
+  a.href = url;
+  a.download = "data_incubator.csv";
+  a.click();
+}
+</script>
 
 </body>
 </html>
