Update Firebase API key in index.html

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
   <script>
     // 🔥 GANTI ini dengan config Firebase kamu
     const firebaseConfig = {
-      apiKey: "GANTI",
+      apiKey: "AIzaSyBgIiTFpHKBLsH7pNoE1-023cDCDzEJLyE",
       authDomain: "GANTI",
       databaseURL: "GANTI",
       projectId: "GANTI",
